--- a/blocks/intro/__occupation/intro__occupation.css
+++ b/blocks/intro/__occupation/intro__occupation.css
@@ -11,6 +11,10 @@
   margin-left: 3.75px;
   margin-bottom: 71px;
   grid-area: occup;
+  max-width: 30vw;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
  @media screen and (max-width:980px) {
