--- a/blocks/popup-form/__aboutme/popup-form__aboutme.css
+++ b/blocks/popup-form/__aboutme/popup-form__aboutme.css
@@ -7,25 +7,12 @@
   width: 100%;
   max-width: 358px;
   margin-top: 29.74px;
-  margin-right: 36px;
   margin-bottom: 13.34px;
   border-top: hidden;
   border-left: hidden;
   border-right: hidden;
   border-bottom: hidden;
   outline: none;
-}
-
-@media screen and (max-width: 1120px) {
-  .popup-form__aboutme {
-    max-width: 26.7858vw;
-  }
-}
-
-@media screen and (max-width: 775px) {
-  .popup-form__aboutme {
-    max-width: 25.806vw;
-  }
 }
 
 @media screen and (max-width: 320px) {
