--- a/blocks/popup-form/__format/popup-form__format.css
+++ b/blocks/popup-form/__format/popup-form__format.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-style: normal;
   color:#000000;
-  width: 358px;
+  max-width: 358px;
   margin-top: 54px;
   margin-left: 36px;
   margin-right: 36px;
@@ -14,9 +14,12 @@
   border-left: hidden;
   border-right: hidden;
   border-bottom: 1px solid rgb(0,0,0,.2);
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+}
+
+@media screen and (max-width: 500px) {
+  .popup-form__format {
+    max-width: 278px;
+  }
 }
 
 @media screen and (max-width: 320px) {
